# Flint

./: .gitignore  CLAUDE.md  Cargo.toml  DOOM_FPS_GAPS.md  E1M1 Tasks.md  INPUT_EXTENSIBILITY_DESIGN.md  PHASE4_ROADMAP.md  PHASE5_ROADMAP.md  TODO_REMAINING_PLAN.md  build-and-install.bat  flint-design-doc.md
crates/flint-animation/: Cargo.toml
crates/flint-animation/src/: blend.rs  clip.rs  lib.rs  loader.rs  node_clip.rs  node_sync.rs  player.rs  sampler.rs  skeletal_clip.rs  skeletal_sampler.rs  skeletal_sync.rs  skeleton.rs  sync.rs
crates/flint-asset/: Cargo.toml
crates/flint-asset-gen/: Cargo.toml
crates/flint-asset-gen/src/: batch.rs  config.rs  human_task.rs  job.rs  lib.rs  manifest.rs  provider.rs  registration.rs  semantic.rs  style.rs  validate.rs
crates/flint-asset-gen/src/providers/: elevenlabs.rs  flux.rs  meshy.rs  mock.rs  mod.rs
crates/flint-asset/src/: catalog.rs  lib.rs  resolver.rs  store.rs  types.rs
crates/flint-audio/: Cargo.toml
crates/flint-audio/src/: engine.rs  lib.rs  sync.rs  trigger.rs
crates/flint-cli/: Cargo.toml
crates/flint-cli/src/: main.rs
crates/flint-cli/src/commands/: asset.rs  edit.rs  entity.rs  init.rs  mod.rs  play.rs  prefab.rs  query.rs  render.rs  scene.rs  schema.rs  serve.rs  validate.rs
crates/flint-constraint/: Cargo.toml
crates/flint-constraint/src/: diff.rs  evaluator.rs  fixer.rs  lib.rs  registry.rs  report.rs  types.rs
crates/flint-core/: Cargo.toml
crates/flint-core/src/: error.rs  hash.rs  id.rs  lib.rs  spline.rs  types.rs
crates/flint-ecs/: Cargo.toml
crates/flint-ecs/src/: component.rs  entity.rs  lib.rs  world.rs
crates/flint-import/: Cargo.toml
crates/flint-import/src/: gltf_import.rs  lib.rs  types.rs
crates/flint-particles/: Cargo.toml
crates/flint-particles/src/: curves.rs  emitter.rs  lib.rs  particle.rs  rand.rs  sync.rs
crates/flint-physics/: Cargo.toml
crates/flint-physics/src/: character.rs  lib.rs  sync.rs  world.rs
crates/flint-player/: Cargo.toml
crates/flint-player/src/: hud.rs  lib.rs  main.rs  player_app.rs  spline_gen.rs
crates/flint-query/: Cargo.toml
crates/flint-query/src/: executor.rs  grammar.pest  lib.rs  output.rs  parser.rs
crates/flint-render/: Cargo.toml
crates/flint-render/examples/: gen_textures.rs
crates/flint-render/src/: billboard_pipeline.rs  billboard_shader.wgsl  bloom_shader.wgsl  camera.rs  composite_shader.wgsl  context.rs  debug.rs  gpu_mesh.rs  headless.rs  lib.rs  model_loader.rs  outline_shader.wgsl  particle_pipeline.rs  particle_shader.wgsl  pipeline.rs  postprocess.rs  primitives.rs  scene_renderer.rs  shader.wgsl  shadow.rs  shadow_shader.wgsl  skinned_pipeline.rs  skinned_shader.wgsl  skybox_pipeline.rs  skybox_shader.wgsl  ssao_blur_shader.wgsl  ssao_shader.wgsl  terrain_pipeline.rs  terrain_shader.wgsl  texture_cache.rs
crates/flint-runtime/: Cargo.toml
crates/flint-runtime/src/: clock.rs  event.rs  event_bus.rs  input.rs  lib.rs  persist.rs  state.rs  system.rs
crates/flint-scene/: Cargo.toml
crates/flint-scene/src/: format.rs  lib.rs  loader.rs  patcher.rs  prefab.rs  saver.rs
crates/flint-schema/: Cargo.toml
crates/flint-schema/src/: archetype.rs  component.rs  lib.rs  registry.rs  validation.rs
crates/flint-script/: Cargo.toml
crates/flint-script/src/: api.rs  context.rs  engine.rs  lib.rs  sync.rs
crates/flint-script/src/ui/: element.rs  layout.rs  loader.rs  mod.rs  style.rs
crates/flint-terrain/: Cargo.toml
crates/flint-terrain/src/: chunk.rs  heightmap.rs  lib.rs  terrain.rs
crates/flint-viewer/: Cargo.toml
crates/flint-viewer/src/: app.rs  lib.rs  picking.rs  projection.rs  spline_editor.rs  transform_gizmo.rs  undo.rs
crates/flint-viewer/src/panels/: entity_inspector.rs  mod.rs  render_stats.rs  scene_tree.rs  spline_panel.rs  transform_gizmo.rs  view_gizmo.rs
demo/: build-tavern.ps1  explore-tavern.ps1  input_showcase.toml  lighting_test.scene.toml  particles_demo.scene.toml  pbr_test.scene.toml  phase3_showcase.scene.toml  phase4_runtime.scene.toml  phase5_ai_demo.scene.toml  showcase.scene.toml  showcase_crucible.scene.toml  showcase_tavern.scene.toml  skeletal_test.scene.toml  terrain_test.scene.toml  transparency_test.scene.toml  view-showcase.ps1
demo/animations/: door_close.anim.toml  door_swing.anim.toml  platform_bob.anim.toml
demo/models/: Mug.glb  YBot.glb  YBotWithIdle.glb  barrel.glb  chair.glb  mug2.glb  table.glb
demo/scripts/: ambient_events.rhai  candle_flicker.rhai  door_interact.rhai  door_interact_v2.rhai  footsteps.rhai  forge_flicker.rhai  hud_interact.rhai  npc_bartender.rhai  npc_mysterious_stranger.rhai  npc_patron.rhai  showcase_ambience.rhai  showcase_anvil.rhai  showcase_controller.rhai  showcase_forge_spirit.rhai  showcase_hud.rhai  showcase_passage.rhai  showcase_stranger.rhai  torch_flicker.rhai
docs/: TERRAIN_ROADMAP.md  build.ps1  phase2-constraints-and-assets.md  publish.bat  rustdoc-header.html
docs/book/: book.toml
docs/book/src/: SUMMARY.md  contributing.md  introduction.md  quick-reference.md  roadmap.md
games/doom_fps/: gen_audio.py  gen_sprites.py  gen_textures.py
games/doom_fps/scenes/: e1m1_hangar.scene.toml  fps_arena.scene.toml
games/doom_fps/scripts/: door.rhai  enemy_ai.rhai  enemy_ai_hitscan.rhai  exit_switch.rhai  hazard_zone.rhai  hud.rhai  level_controller.rhai  pickup.rhai  player_weapon.rhai  secret_wall.rhai
schemas/archetypes/: ceiling.toml  character.toml  door.toml  floor.toml  pillar.toml  player.toml  terrain.toml  wall.toml
schemas/components/: animator.toml  asset_def.toml  audio_listener.toml  audio_source.toml  audio_trigger.toml  character_controller.toml  collider.toml  door.toml  interactable.toml  material.toml  particle_emitter.toml  rigidbody.toml  script.toml  skeleton.toml  sprite.toml  terrain.toml  transform.toml
schemas/constraints/: basics.toml
styles/: medieval_tavern.style.toml
testGame/levels/: demo.scene.toml
testGame/schemas/archetypes/: door.toml  furniture.toml  room.toml
testGame/schemas/components/: bounds.toml
testModels/: CubeWithTexture.glb
(+54 files in other folders)
