[workspace]
resolver = "2"
members = [
    "crates/flint-core",
    "crates/flint-schema",
    "crates/flint-ecs",
    "crates/flint-scene",
    "crates/flint-query",
    "crates/flint-render",
    "crates/flint-constraint",
    "crates/flint-asset",
    "crates/flint-asset-gen",
    "crates/flint-import",
    "crates/flint-viewer",
    "crates/flint-runtime",
    "crates/flint-physics",
    "crates/flint-player",
    "crates/flint-audio",
    "crates/flint-animation",
    "crates/flint-script",
    "crates/flint-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Chris"]

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
thiserror = "2.0"
anyhow = "1.0"

# ECS
hecs = "0.10"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Query parsing
pest = "2.7"
pest_derive = "2.7"

# Rendering
wgpu = "23.0"
winit = "0.30"
pollster = "0.4"
bytemuck = { version = "1.19", features = ["derive"] }

# File watching
notify = "7.0"
notify-debouncer-mini = "0.5"

# Image encoding
image = "0.25"

# Physics
rapier3d = { version = "0.22", features = ["default"] }

# Audio
kira = { version = "0.11", features = ["cpal", "ogg"] }
glam = { version = "0.30", features = ["mint"] }

# Scripting
rhai = { version = "1", features = ["sync"] }

# Game loop
instant = "0.1"

# HTTP
ureq = { version = "3", features = ["json"] }

# Utilities
bimap = "0.6"
sha2 = "0.10"
uuid = { version = "1.11", features = ["v4"] }
dirs = "6"

# glTF
gltf = "1.4"

# GUI
egui = "0.30.0"
egui-wgpu = "0.30.0"
egui-winit = "0.30.0"

# Internal crates
flint-core = { path = "crates/flint-core" }
flint-schema = { path = "crates/flint-schema" }
flint-ecs = { path = "crates/flint-ecs" }
flint-scene = { path = "crates/flint-scene" }
flint-query = { path = "crates/flint-query" }
flint-render = { path = "crates/flint-render" }
flint-constraint = { path = "crates/flint-constraint" }
flint-asset = { path = "crates/flint-asset" }
flint-import = { path = "crates/flint-import" }
flint-viewer = { path = "crates/flint-viewer" }
flint-runtime = { path = "crates/flint-runtime" }
flint-physics = { path = "crates/flint-physics" }
flint-audio = { path = "crates/flint-audio" }
flint-animation = { path = "crates/flint-animation" }
flint-script = { path = "crates/flint-script" }
flint-asset-gen = { path = "crates/flint-asset-gen" }
flint-player = { path = "crates/flint-player" }
