[package]
name = "flint-asset"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Content-addressed asset pipeline for Flint"

[dependencies]
flint-core = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
uuid = { workspace = true }
