[package]
name = "flint-audio"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Spatial audio system for Flint engine (Kira backend)"

[dependencies]
flint-core = { workspace = true }
flint-ecs = { workspace = true }
flint-runtime = { workspace = true }
kira = { workspace = true }
glam = { workspace = true }
toml = { workspace = true }
