[package]
name = "flint-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types and utilities for the Flint engine"

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
