[package]
name = "flint-ecs"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ECS world management for Flint"

[dependencies]
flint-core = { workspace = true }
flint-schema = { workspace = true }
hecs = { workspace = true }
bimap = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
