[package]
name = "flint-particles"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GPU-instanced particle system for Flint"

[dependencies]
flint-core = { workspace = true }
flint-ecs = { workspace = true }
flint-runtime = { workspace = true }
toml = { workspace = true }
bytemuck = { workspace = true }
