[package]
name = "flint-physics"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Rapier 3D physics integration for Flint engine"

[dependencies]
flint-core = { workspace = true }
flint-ecs = { workspace = true }
flint-runtime = { workspace = true }
rapier3d = { workspace = true }
crossbeam = "0.8"
toml = { workspace = true }
