[package]
name = "flint-query"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Query language for Flint ECS"

[dependencies]
flint-core = { workspace = true }
flint-ecs = { workspace = true }
pest = { workspace = true }
pest_derive = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
