[package]
name = "flint-render"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "wgpu renderer for Flint"

[dependencies]
flint-core = { workspace = true }
flint-ecs = { workspace = true }
flint-import = { workspace = true }
flint-terrain = { workspace = true }
toml = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
pollster = { workspace = true }
bytemuck = { workspace = true }
image = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
naga = { version = "23", features = ["wgsl-in"] }
