[package]
name = "flint-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Game loop, input, and event system for Flint engine"

[dependencies]
flint-core = { workspace = true }
flint-ecs = { workspace = true }
toml = { workspace = true }
winit = { workspace = true }
