[package]
name = "flint-scene"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "TOML scene serialization for Flint"

[dependencies]
flint-core = { workspace = true }
flint-schema = { workspace = true }
flint-ecs = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
