[package]
name = "flint-script"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Rhai scripting system for Flint engine"

[dependencies]
flint-core = { workspace = true }
flint-ecs = { workspace = true }
flint-runtime = { workspace = true }
flint-physics = { workspace = true }
rhai = { workspace = true }
toml = { workspace = true }
